crates/bevy_derive/compile_fail/tests/deref_mut_derive/mismatched_target_type_fail.stderr
error[E0308]: mismatched types
 --> tests/deref_mut_derive/mismatched_target_type_fail.rs:4:10
  |
4 | #[derive(DerefMut)]
  |          ^^^^^^^^
  |          |
  |          expected `&mut String`, found `&mut usize`
  |          expected `&mut String` because of return type
  |
  = note: expected mutable reference `&mut String`
             found mutable reference `&mut usize`
  = note: this error originates in the derive macro `DerefMut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/deref_mut_derive/mismatched_target_type_fail.rs:16:10
   |
16 | #[derive(DerefMut)]
   |          ^^^^^^^^
   |          |
   |          expected `&mut String`, found `&mut usize`
   |          expected `&mut String` because of return type
   |
   = note: expected mutable reference `&mut String`
              found mutable reference `&mut usize`
   = note: this error originates in the derive macro `DerefMut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
